# rag-pdf-assistant

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
scripts/: ingest_and_query.py
src/docuchat/: __init__.py  config.py  logging_config.py
src/docuchat/api/: __init__.py  app.py  dependencies.py  models.py
src/docuchat/api/routers/: __init__.py  chat.py  ingest.py
src/docuchat/evaluation/: __init__.py
src/docuchat/ingestion/: __init__.py  embedder.py  loader.py  splitter.py
src/docuchat/memory/: __init__.py
src/docuchat/retrieval/: __init__.py  chain.py  reranker.py  retriever.py
tests/: conftest.py
tests/integration/: conftest.py  test_chat.py  test_ingest.py
tests/unit/: test_loader.py  test_reranker.py  test_retriever.py  test_splitter.py
